--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@ body {
   min-height: 100vh;
 }
 
+footer {
+  max-width: 50%;
+  line-height: 1.4;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+}
+
 .loading {
   max-width: 50%;
   line-height: 1.4;
@@ -39,14 +49,14 @@ body {
   font-size: 18px;
   font-family: 'Aldrich', sans-serif;
   color: #31a33c;
-    text-shadow: 2px 2px 4px #000000;
+  text-shadow: 2px 2px 4px #000000;
   margin: 0.6rem 0 2rem 0;
   display: block;
 }
 
 .loading__anim {
-  width: 35px;
-  height: 35px;
+  width: 45px;
+  height: 45px;
   display: inline-block;
   border: 5px solid rgba(189,189,189 ,0.25);
   border-left-color: green;
@@ -58,23 +68,23 @@ body {
 .loading__logo {
   width: 150px;
 }
+
 .copyright {
   color: #31a33c;
- text-shadow: 2px 2px 4px #000000;
+  text-shadow: 2px 2px 4px #000000;
   font-size: 14px;
-	bottom: 0px;
   margin: 25px;
   display: block;
 }
     </style>
     <body>
-            <div class="loading">
-                    <img src="https://vignette.wikia.nocookie.net/csydes-test/images/1/1a/The_Sims_3_Logo.png/revision/latest?cb=20141211014820" alt="sims 3 logo" class="loading__logo">
-                   <span class="loading__sims">LOADING...</span>
-                   <span class="loading__anim"></span>
-                   <span class="copyright">
-                   @2009 Electronic Arts Inc. All Rights Reserved.
-                 </span>
-                 </div>
+	<div class="loading">
+        	<img src="https://vignette.wikia.nocookie.net/csydes-test/images/1/1a/The_Sims_3_Logo.png/revision/latest?cb=20141211014820" alt="sims 3 logo" class="loading__logo">
+                <span class="loading__sims">LOADING...</span>
+                <span class="loading__anim"></span>
+	</div>
+	<footer class="copyright">
+		@2009 Electronic Arts Inc. All Rights Reserved.
+	</footer>
     </body>
-    </html>
+</html>
